<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">e621 mobile</string>
    <string name="action_settings">Settings</string>
    <string name="action_export">Export images</string>
    <string name="action_update_export">Re-export images</string>
    <string name="action_remove_export">Remove exported images</string>
    <string name="action_online_search">Search online</string>
    <string name="action_offline_search">Search offline</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_search">Search</string>
    <string name="search_button">Search</string>
    <string name="search_input">Search…</string>
    <string name="prev_page">Previous</string>
    <string name="next_page">Next</string>
    <string name="page_counter">"Page\n%1$s/%2$s"</string>
    <string name="no_results">No results found.</string>
    <string name="no_internet_no_results">Could not retrieve results. Please check your internet connection.</string>
    <string name="title_activity_image">Image</string>
    <string name="title_activity_downloads">Local Storage</string>
    <string name="local_search_button">Local Search</string>
    <string name="internet_search_button">Online Search</string>
    <string name="login">Sign In</string>
    <string name="sync">Sync</string>
    <string name="title_activity_error_report">ErrorReportActivity</string>
    <string name="subscribe">Subscribe</string>
    <string name="continue_later">Continue from here later</string>
    <string name="continue_later_after">Continue after here later</string>
    <string name="continue_search">Continue Search</string>
    <string name="title_activity_search_continue">Search Continued</string>
    <string name="artists_website">Artist`s website</string>
    <string name="change_mascot">Change mascot</string>
    <string name="send_error_report">Send Error Report</string>
    <string name="get_full_image">Get full image</string>
    <string name="tags_dropdown">Tags ▼</string>
    <string name="loading">Loading</string>
    <string name="loading_tags">Loading tags</string>
    <string name="restore_previous_backup">Restore previous backup</string>
    <string name="restore_last_backup">Restore last backup</string>
    <string name="about">
        Thank you very much for using this app!
        \n\n
		This unofficial app has no warranty whatsoever and has no official relationship with e621 staff.
		\n\n
		Developed by Douglas Vanny Bento (me@beastarman.info)
    </string>
    <string name="changelog">
        Version 0.1a.3: Improved transition between activities and fixed download buttons.
        \n\n
        Version 0.1a.1: Fixed Urgent Error Reporting bug.
        \n\n
        Version 0.1a: Everything.
    </string>
    <string name="new_version_found">Version %1$s is out! Would you like to upgrade?</string>
    
    <string name="bitcoin">1GA82eVKvXv23Ww8kPFQR7oALfXUuomx9</string>
    <string name="paypal">douglas.v.d@hotmail.com</string>
    <string name="paypal_donation_link">
        <![CDATA[
        	https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=douglas%2ev%2ed%40hotmail%2ecom&lc=US&item_name=E621%20Mobile%20App%20Donation&no_note=0&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donateCC_LG%2egif%3aNonHostedGuest
    	]]>
    </string>
    <string name="buy_me_porn">
        <![CDATA[
        	Thank you very much for considering making a donation!<br/><br/>Check below for donation methods.
        ]]>
       </string>
    <string name="parent_post">Parent Post: #%1$s</string>
    <string name="children_posts">Child posts</string>
    <string name="welcome">
        E621 Mobile lets you browse the whole E621 image database and even pick the images you like and download to
        your phone discretely. You can even search for them without any internet connection.
        \n\n
        To do that however, please visit the settings page and click "Force full metadata update". This will download the whole
        tag base from E621, allowing you to search for your downloads using tags. You can do it whenever you want. 
    </string>
    <string name="look_for_update">Look for update</string>
</resources>
